cambio en las carpetas, creado nuevo proyecto G5Forces y funcionalidad tecla ESC para cerrar las ventanas modales

--- a/Portfolio/html/portfolioJulenHidalgo.html
+++ b/Portfolio/html/portfolioJulenHidalgo.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="https://www.linkedin.com/in/julen-hidalgo-chamero-11a70a2bb/" target="_blank">LinkedIn</a>
-        <a href="../res/JulenHidalgo_CV.pdf" target="_blank">CV</a>
+        <a href="../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
     </header>
     <div class="titulo">Mis proyectos</div>
     <div class="proyecto">
@@ -33,13 +33,13 @@
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalSign()">
-                <img src="../res/img/signUpSignIn/inicio.png"/>
+                <img src="../res/signUpSignIn/img/inicio.png"/>
             </a>
         </div>
     </div>
     <div class="modal" id="modalSign">
         <div class="modalContenido" id="modalContenidoSign">
-            <img src="../res/img/signUpSignIn/inicio.png">
+            <img src="../res/signUpSignIn/img/inicio.png">
             <div class="divCerrar"><span class="cerrar">Volver</span></div>
         </div>
     </div>
@@ -63,13 +63,13 @@
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalAuziker()">
-                <img src="../res/img/auziker/portada.png"/>
+                <img src="../res/auziker/img/portada.png"/>
             </a>
         </div>
     </div>
     <div class="modal" id="modalAuziker">
         <div class="modalContenido" id="modalContenidoAuziker">
-            <img src="../res/img/auziker/portada.png">
+            <img src="../res/auziker/img/portada.png">
             <div class="divCerrar"><span class="cerrar">Volver</span></div>
         </div>
     </div>
@@ -84,7 +84,7 @@
                     pudiendo añadir recetas con explicaciones sobre como hacer cada una.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta aplicación fue desarrollada durante un mes como reto final del primer curso del Grado Superior de DAM. (Abril - Mayo 2024)
+                    <span>Fecha:</span> Esta aplicación fue desarrollada durante un mes como reto final del primer curso del grado superior de DAM. (Abril - Mayo 2024)
                 </li>
                 <li>
                     <span>Colaboradores:</span> En este proyecto trabajé con dos compañeros más, tanto en el diseño como en el desarrollo.
@@ -94,13 +94,46 @@
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalCooking()">
-                <img src="../res/img/cooking_master/portada.png"/>
+                <img src="../res/cooking/img/portada.png"/>
             </a>
         </div>
     </div>
     <div class="modal" id="modalCooking">
         <div class="modalContenido" id="modalContenidoCooking">
-            <img src="../res/img/cooking_master/portada.png">
+            <video width="640" height="360" controls>
+                <source src="../res/cooking/vid/media1.mp4" type="video/mp4">
+                Tu navegador no soporta la reproducción de videos.
+            </video>
+            <div class="divCerrar"><span class="cerrar">Volver</span></div>
+        </div>
+    </div>
+    <div class="proyecto">
+        <div class="tituloProyecto">G5 FORCES</div>
+        <div class="descripcion">
+            <ul>
+                <li>
+                    <span>Descripción:</span> Este proyecto es un trabajo realizado en clase. El objetivo era crear una web dinámica sobre un tema de nuestra elección.
+                    Nuestra idea fue crear una web sobre parques de atracciones, en la que se pueda guardar y mostrar información sobre distintos parques, 
+                    en los cuales hay atracciones sobre las que interesa mostrar información, como su estatura mínima, velocidad máxima y más datos.
+                </li>
+                <li>
+                    <span>Fecha:</span> Esta página web la creamos durante un mes, en la tercera evaluación del grado superior de DAM (Abril - Mayo 2024)
+                </li>
+                <li>
+                    <span>Colaboradores:</span> En este proyecto estuve trabajando con dos compañeros, aunque no formé parte de la creación del diseño.
+                </li>
+            </ul>
+            <div class="enlaces"><div><a>Más información</a></div></div>
+        </div>
+        <div class="imagenes">
+            <a onclick="mostrarModalG5()">
+                <img src="../res/g5forces/img/index.png"/>
+            </a>
+        </div>
+    </div>
+    <div class="modal" id="modalG5">
+        <div class="modalContenido" id="modalContenidoG5">
+            <img src="../res/g5forces/img/index.png">
             <div class="divCerrar"><span class="cerrar">Volver</span></div>
         </div>
     </div>
