subidas capturas auziker + creacion del slideshow

--- a/Portfolio/html/portfolioJulenHidalgo.html
+++ b/Portfolio/html/portfolioJulenHidalgo.html
@@ -43,7 +43,7 @@
             <div class="divCerrar"><span class="cerrar">Volver</span></div>
         </div>
     </div>
-    <div class="proyecto">
+    <div class="proyecto" id="auziker">
         <div class="tituloProyecto">Auziker | IKERKUDE S.L.</div>
         <div class="descripcion">
             <ul>
@@ -59,7 +59,7 @@
                     <span>Colaboradores:</span> En este proyecto trabajé yo solo, hice tanto el diseño como el desarrollo.
                 </li>
             </ul>
-            <div class="enlaces"><div><a>Más información</a></div><div><a href="https://julenhidalgo.github.io/WebAuziker/auziker/HTML/ES/indice.html" target="_blank">Visitar web</a></div></div>
+            <div class="enlaces"><div><a href="proyectos/auziker.html">Más información</a></div><div><a href="https://julenhidalgo.github.io/WebAuziker/auziker/HTML/ES/indice.html" target="_blank">Visitar web</a></div></div>
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalAuziker()">
