terminado el proyecto signUpSignIn y empezado con cookingMaster

--- a/Portfolio/html/portfolioJulenHidalgo.html
+++ b/Portfolio/html/portfolioJulenHidalgo.html
@@ -14,7 +14,7 @@
         <a href="../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
     </header>
     <div class="titulo">Mis proyectos</div>
-    <div class="proyecto">
+    <div class="proyecto" id="signupsignin">
         <div class="tituloProyecto">SIGN UP SIGN IN (en proceso)</div>
         <div class="descripcion">
             <ul>
@@ -29,7 +29,7 @@
                     <span>Colaboradores:</span> En este proyecto he trabajado con dos compañeros de clase.
                 </li>
             </ul>
-            <div class="enlaces"><div><a>Más información</a></div></div>
+            <div class="enlaces"><div><a href="proyectos/signUpSignIn.html">Más información</a></div></div>
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalSign()">
@@ -73,7 +73,7 @@
             <div class="divCerrar"><span class="cerrar">Volver</span></div>
         </div>
     </div>
-    <div class="proyecto">
+    <div class="proyecto" id="cooking">
         <div class="tituloProyecto">COOKING MASTER</div>
         <div class="descripcion">
             <ul>
@@ -90,7 +90,7 @@
                     <span>Colaboradores:</span> En este proyecto trabajé con dos compañeros más, tanto en el diseño como en el desarrollo.
                 </li>
             </ul>
-            <div class="enlaces"><div><a>Más información</a></div></div>
+            <div class="enlaces"><div><a href="proyectos/cooking.html">Más información</a></div></div>
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalCooking()">
