--- a/Portfolio/html/proyectos/cooking.html
+++ b/Portfolio/html/proyectos/cooking.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/slideshow.css">
     <link rel="icon" href="" type="image/x-icon">
-    <title>Proyectos - Auziker</title>
+    <title>Proyectos - Cooking Master</title>
 </head>
 <body>
     <header>
         <a href="https://www.linkedin.com/in/julen-hidalgo-chamero-11a70a2bb/" target="_blank">LinkedIn</a>
-        <a href="../portfolioJulenHidalgo.html#auziker">VOLVER</a>
+        <a href="../portfolioJulenHidalgo.html#cooking">VOLVER</a>
         <a href="../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
     </header>
-    <div class="titulo">Auziker</div>
+    <div class="titulo">Cooking Master</div>
     <div class="proyecto masInfo">
         <div class="descripcion">
             <ul>
@@ -39,9 +39,6 @@
                     <span>Colaboradores:</span> En este proyecto trabajé yo solo, hice tanto el diseño como el desarrollo.
                 </li>
             </ul>
-            <div class="enlaces">
-                <div><a href="https://julenhidalgo.github.io/WebAuziker/auziker/HTML/ES/indice.html" target="_blank">Visitar web</a></div>
-            </div>
             <div class="slideshow-container">
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade slides">
