creado el proyecto g5Forces y arregladas las conexiones entre archivos

--- a/Portfolio/html/portfolioJulenHidalgo.html
+++ b/Portfolio/html/portfolioJulenHidalgo.html
@@ -102,12 +102,12 @@
         <div class="modalContenido" id="modalContenidoCooking">
             <video width="640" height="360" controls>
                 <source src="../res/cooking/vid/media1.mp4" type="video/mp4">
-                Tu navegador no soporta la reproducción de videos.
+                Tu navegador no acepta la reproduccion de videos
             </video>
             <div class="divCerrar"><span class="cerrar">Volver</span></div>
         </div>
     </div>
-    <div class="proyecto">
+    <div class="proyecto" id="g5">
         <div class="tituloProyecto">G5 FORCES</div>
         <div class="descripcion">
             <ul>
@@ -123,7 +123,7 @@
                     <span>Colaboradores:</span> En este proyecto estuve trabajando con dos compañeros, aunque no formé parte de la creación del diseño.
                 </li>
             </ul>
-            <div class="enlaces"><div><a>Más información</a></div></div>
+            <div class="enlaces"><div><a href="proyectos/g5Forces.html">Más información</a></div></div>
         </div>
         <div class="imagenes">
             <a onclick="mostrarModalG5()">
