--- a/Portfolio/html/proyectos/cooking.html
+++ b/Portfolio/html/proyectos/cooking.html
@@ -13,7 +13,7 @@
     <header>
         <a href="https://www.linkedin.com/in/julen-hidalgo-chamero-11a70a2bb/" target="_blank">LinkedIn</a>
         <a href="../portfolioJulenHidalgo.html#cooking">VOLVER</a>
-        <a href="../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
+        <a href="../../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
     </header>
     <div class="titulo">Cooking Master</div>
     <div class="proyecto masInfo">
@@ -29,35 +29,42 @@
                     y que se comuniquen por sus propios medios si les interesa. 
                 </li>
                 <li>
-                    <span>Conocimientos aplicados:</span> HTML, CSS y JavaScript.
+                    <span>Conocimientos aplicados:</span> Java, WindowBuilder y MySQL.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta web la hice durante la FCT del primer curso del grado superior de DAM, 
-                    cuya duración es de tres semanas. (Mayo 2024)
+                    <span>Fecha:</span> Esta aplicación fue desarrollada durante un mes como reto final del primer curso del grado superior de DAM. (Abril - Mayo 2024)
                 </li>
                 <li>
-                    <span>Colaboradores:</span> En este proyecto trabajé yo solo, hice tanto el diseño como el desarrollo.
+                    <span>Colaboradores:</span> En este proyecto trabajé con dos compañeros más, tanto en el diseño como en el desarrollo.
                 </li>
             </ul>
             <div class="slideshow-container">
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/portada.png">
+                    <img class="imgSlides" src="../../res/cooking/img/portada.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/enfoque.png">
+                    <img class="imgSlides" src="../../res/cooking/img/inicio.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/proyectos.png">
+                    <img class="imgSlides" src="../../res/cooking/img/buscar.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/productos.png">
+                    <img class="imgSlides" src="../../res/cooking/img/buscarIngredientes.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/usoProductos.png">
+                    <img class="imgSlides" src="../../res/cooking/img/buscarRecetas.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/noticias.png">
+                    <img class="imgSlides" src="../../res/cooking/img/ingredientes.png">
+                </div>
+                <div class="mySlides fade slides">
+                    <img class="imgSlides" src="../../res/cooking/img/recetaCooking.png">
+                </div>
+                <div class="mySlides fade slides">
+                    <video width="640" height="360" controls>
+                        <source src="../../res/cooking/vid/media1.mp4" type="video/mp4">
+                    </video>
                 </div>
 
                 <div> <!-- Next and previous buttons -->
