--- a/Portfolio/html/proyectos/signUpSignIn.html
+++ b/Portfolio/html/proyectos/signUpSignIn.html
@@ -13,7 +13,7 @@
     <header>
         <a href="https://www.linkedin.com/in/julen-hidalgo-chamero-11a70a2bb/" target="_blank">LinkedIn</a>
         <a href="../portfolioJulenHidalgo.html#signupsignin">VOLVER</a>
-        <a href="../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
+        <a href="../../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
     </header>
     <div class="titulo">SignUpSignIn</div>
     <div class="proyecto masInfo">
