--- a/Portfolio/html/proyectos/g5Forces.html
+++ b/Portfolio/html/proyectos/g5Forces.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/slideshow.css">
     <link rel="icon" href="" type="image/x-icon">
-    <title>Proyectos - Auziker</title>
+    <title>Proyectos - G5 Forces</title>
 </head>
 <body>
     <header>
         <a href="https://www.linkedin.com/in/julen-hidalgo-chamero-11a70a2bb/" target="_blank">LinkedIn</a>
-        <a href="../portfolioJulenHidalgo.html#auziker">VOLVER</a>
+        <a href="../portfolioJulenHidalgo.html#g5">VOLVER</a>
         <a href="../../res/cv/JulenHidalgo_CV.pdf" target="_blank">CV</a>
     </header>
-    <div class="titulo">Auziker</div>
+    <div class="titulo">G5 Forces</div>
     <div class="proyecto masInfo">
         <div class="descripcion">
             <ul>
@@ -29,38 +29,34 @@
                     y que se comuniquen por sus propios medios si les interesa. 
                 </li>
                 <li>
-                    <span>Conocimientos aplicados:</span> HTML, CSS y JavaScript.
+                    <span>Conocimientos aplicados:</span> HTML, CSS, JavasCript, XML, XSLT y PHP.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta web la hice durante la FCT del primer curso del grado superior de DAM, 
-                    cuya duración es de tres semanas. (Mayo 2024)
+                    <span>Fecha:</span> Esta página web la creamos durante un mes, en la tercera evaluación del grado superior de DAM (Abril - Mayo 2024)
                 </li>
                 <li>
-                    <span>Colaboradores:</span> En este proyecto trabajé yo solo, hice tanto el diseño como el desarrollo.
+                    <span>Colaboradores:</span> En este proyecto estuve trabajando con dos compañeros, aunque no formé parte de la creación del diseño.
                 </li>
             </ul>
-            <div class="enlaces">
-                <div><a href="https://julenhidalgo.github.io/WebAuziker/auziker/HTML/ES/indice.html" target="_blank">Visitar web</a></div>
-            </div>
             <div class="slideshow-container">
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/portada.png">
+                    <img class="imgSlides" src="../../res/g5forces/img/index.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/enfoque.png">
+                    <img class="imgSlides" src="../../res/g5forces/img/parques.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/proyectos.png">
+                    <img class="imgSlides" src="../../res/g5forces/img/atracciones.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/productos.png">
+                    <img class="imgSlides" src="../../res/g5forces/img/mapa.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/usoProductos.png">
+                    <img class="imgSlides" src="../../res/g5forces/img/logIn.png">
                 </div>
                 <div class="mySlides fade slides">
-                    <img class="imgSlides" src="../../res/auziker/img/noticias.png">
+                    <img class="imgSlides" src="../../res/g5forces/img/logUp.png">
                 </div>
 
                 <div> <!-- Next and previous buttons -->
