terminadas las descripciones de los proyectos cooking y g5Forces

--- a/Portfolio/html/proyectos/cooking.html
+++ b/Portfolio/html/proyectos/cooking.html
@@ -20,13 +20,10 @@
         <div class="descripcion">
             <ul>
                 <li>
-                    <span>Descripción:</span> Cuando llegue a la empresa Auziker, me contaron que lo que necesitaban era una página web, 
-                    ya que la que tenían anteriormente no cumplía con lo que ellos buscaban. Desde ese momento estuve hablando con varios 
-                    de los trabajadores de la empresa, para ver el punto de vista que tenía cada uno y así poder hacerme una idea sobre 
-                    como diseñar la web. Mi objetivo era crear una web para que gente interesada pudiera ponerse en contacto con ellos, 
-                    aunque tras varios problemas debido a mis conocimientos en ese momento y el poco tiempo acabé haciendo una web simplemente 
-                    informativa en la que se puede ver toda la información necesaria para que los clientes supieran lo que la empresa ofrece 
-                    y que se comuniquen por sus propios medios si les interesa. 
+                    <span>Descripción:</span> El objetivo de esta app es manejar un servicio de cátering para otras empresas, pudiendo añadir recetas con 
+                    explicaciones sobre como hacer cada una. Para lograr esto tuvimos que gestionar tres tipos de usuarios distintos, cada uno de ellos tenía la capacidad de 
+                    hacer ciertas acciones. Por ejemplo, los de compras solamente podían añadir nuevos ingredientes y no podían crear nuevas recetas. Lo complicado de este proyecto era 
+                    la comunicación con la base de datos creada en MySQL, sobre la que se podían insertar y seleccionar datos.
                 </li>
                 <li>
                     <span>Conocimientos aplicados:</span> Java, WindowBuilder y MySQL.
