--- a/Portfolio/html/proyectos/g5Forces.html
+++ b/Portfolio/html/proyectos/g5Forces.html
@@ -20,16 +20,14 @@
         <div class="descripcion">
             <ul>
                 <li>
-                    <span>Descripción:</span> Cuando llegue a la empresa Auziker, me contaron que lo que necesitaban era una página web, 
-                    ya que la que tenían anteriormente no cumplía con lo que ellos buscaban. Desde ese momento estuve hablando con varios 
-                    de los trabajadores de la empresa, para ver el punto de vista que tenía cada uno y así poder hacerme una idea sobre 
-                    como diseñar la web. Mi objetivo era crear una web para que gente interesada pudiera ponerse en contacto con ellos, 
-                    aunque tras varios problemas debido a mis conocimientos en ese momento y el poco tiempo acabé haciendo una web simplemente 
-                    informativa en la que se puede ver toda la información necesaria para que los clientes supieran lo que la empresa ofrece 
-                    y que se comuniquen por sus propios medios si les interesa. 
+                    <span>Descripción:</span> En este proyecto ya contabamos con un diseño creado anteriormente, por lo que lo único que teníamos que hacer es que la 
+                    web pasara de ser estática a dinámica, es decir que pueda leer los datos de una base de datos o de un XML, en este caso guardabamos la información 
+                    tanto de parques como de sus respectivas atracciones en un archivo XML. Para conseguir el objetivo, tuvimos que crear archivos PHP que recogen datos 
+                    de formularios y despues modifican los archivos XML. Además de eso tambien son los que se encargan de mostrar los datos en sus respectivos sitios.
+                    Tuvimos que crear un servidor Xampp con el que haciamos que funcionara la conexión para la lectura y modificación de los XML.
                 </li>
                 <li>
-                    <span>Conocimientos aplicados:</span> HTML, CSS, JavasCript, XML, XSLT y PHP.
+                    <span>Conocimientos aplicados:</span> HTML, CSS, JavasCript, XML, XSLT, PHP y Xampp.
                 </li>
                 <li>
                     <span>Fecha:</span> Esta página web la creamos durante un mes, en la tercera evaluación del grado superior de DAM (Abril - Mayo 2024)
