--- a/Portfolio/html/portfolioJulenHidalgo.html
+++ b/Portfolio/html/portfolioJulenHidalgo.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="" type="image/x-icon">
     <title>Portfolio - Julen Hidalgo</title>
 </head>
+
 <body>
     <header>
         <a href="https://www.linkedin.com/in/julen-hidalgo-chamero-11a70a2bb/" target="_blank">LinkedIn</a>
@@ -15,32 +16,58 @@
     </header>
     <div class="titulo">Mis proyectos</div>
     <div class="proyecto" id="signupsignin">
-        <div class="tituloProyecto">SIGN UP SIGN IN (en proceso)</div>
+        <div class="tituloProyecto">SIGN UP SIGN IN</div>
         <div class="descripcion">
             <ul>
                 <li>
-                    <span>Descripción:</span> Este proyecto es un trabajo realizado para clase. El objetivo del trabajo era crear 
-                    una aplicación que pueda acceder a una base de datos creada en un servidor en para que varios usuarios puedan registrarse e iniciar sesión de forma simultanea.
+                    <span>Descripción:</span> Este proyecto es un trabajo realizado para clase. El objetivo del trabajo
+                    era crear
+                    una aplicación que pueda acceder a una base de datos creada en un servidor en para que varios
+                    usuarios puedan registrarse e iniciar sesión de forma simultanea.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta aplicación ha sido desarrollada durante 7 semanas como el reto de la primera evaluación del segundo curso del Grado Superior de DAM. (Septiembre - Octubre 2024)
+                    <span>Fecha:</span> Esta aplicación ha sido desarrollada durante 7 semanas como el reto de la
+                    primera evaluación del segundo curso del Grado Superior de DAM. (Septiembre - Octubre 2024)
                 </li>
                 <li>
                     <span>Colaboradores:</span> En este proyecto he trabajado con dos compañeros de clase.
                 </li>
             </ul>
-            <div class="enlaces"><div><a href="proyectos/signUpSignIn.html">Más información</a></div></div>
+            <div class="enlaces">
+                <div><a href="proyectos/signUpSignIn.html">Más información</a></div>
+            </div>
         </div>
         <div class="imagenes">
-            <a onclick="mostrarModalSign()">
-                <img src="../res/signUpSignIn/img/inicio.png"/>
-            </a>
+
+            <img src="../res/signUpSignIn/img/inicio.png" />
+
         </div>
     </div>
-    <div class="modal" id="modalSign">
-        <div class="modalContenido" id="modalContenidoSign">
-            <img src="../res/signUpSignIn/img/inicio.png">
-            <div class="divCerrar"><span class="cerrar">Volver</span></div>
+    <div class="proyecto" id="gymflow">
+        <div class="tituloProyecto">GYMFLOW</div>
+        <div class="descripcion">
+            <ul>
+                <li>
+                    <span>Descripción:</span> Esta aplicación fue creada para un trabajo de clase. El objetivo era desarrollar 
+                    una app en Android Studio que pueda capturar diferentes tipos de archivos para después mostrarlos, como por 
+                    ejemplo sacar fotos y grabar videos y audios.
+                </li>
+                <li>
+                    <span>Fecha:</span> El proyecto para el que se creó está app tenía como fecha límite dos semanas. Mientras 
+                    realizabamos la otra aplicación SignUpSignIn estábamos trabajando en esta otra. (Octubre 2024)
+                </li>
+                <li>
+                    <span>Colaboradores:</span> En este proyecto he trabajado con dos compañeros de clase.
+                </li>
+            </ul>
+            <div class="enlaces">
+                <div><a href="proyectos/gymflow.html">Más información</a></div>
+            </div>
+        </div>
+        <div class="imagenes">
+
+            <img src="../res/gymflow/img/logo.png" />
+
         </div>
     </div>
     <div class="proyecto" id="auziker">
@@ -48,29 +75,27 @@
         <div class="descripcion">
             <ul>
                 <li>
-                    <span>Descripción:</span> Este proyecto es una página web que hice para la empresa Auziker, 
+                    <span>Descripción:</span> Este proyecto es una página web que hice para la empresa Auziker,
                     con el objetivo de reemplazar la que tenían anteriormente para que así pudieran llegar a más gente.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta web la hice durante la FCT del primer curso del grado superior de DAM, 
+                    <span>Fecha:</span> Esta web la hice durante la FCT del primer curso del grado superior de DAM,
                     cuya duración es de tres semanas. (Mayo 2024)
                 </li>
                 <li>
-                    <span>Colaboradores:</span> En este proyecto trabajé yo solo, hice tanto el diseño como el desarrollo.
+                    <span>Colaboradores:</span> En este proyecto trabajé yo solo, hice tanto el diseño como el
+                    desarrollo.
                 </li>
             </ul>
-            <div class="enlaces"><div><a href="proyectos/auziker.html">Más información</a></div><div><a href="https://julenhidalgo.github.io/WebAuziker/auziker/HTML/ES/indice.html" target="_blank">Visitar web</a></div></div>
+            <div class="enlaces">
+                <div><a href="proyectos/auziker.html">Más información</a></div>
+                <div><a href="https://julenhidalgo.github.io/WebAuziker/auziker/HTML/ES/indice.html"
+                        target="_blank">Visitar web</a></div>
+            </div>
         </div>
         <div class="imagenes">
-            <a onclick="mostrarModalAuziker()">
-                <img src="../res/auziker/img/portada.png"/>
-            </a>
-        </div>
-    </div>
-    <div class="modal" id="modalAuziker">
-        <div class="modalContenido" id="modalContenidoAuziker">
-            <img src="../res/auziker/img/portada.png">
-            <div class="divCerrar"><span class="cerrar">Volver</span></div>
+            <img src="../res/auziker/img/portada.png" />
+
         </div>
     </div>
     <div class="proyecto" id="cooking">
@@ -78,33 +103,27 @@
         <div class="descripcion">
             <ul>
                 <li>
-                    <span>Descripción:</span> Este proyecto es el resultado de un trabajo realizado en clase, 
-                    el objetivo era crear una app funcional que pudiera conectarse a una base de datos para así mostrar cierta información. 
-                    El objetivo de esta app es manejar un servicio de cátering para otras empresas, 
+                    <span>Descripción:</span> Este proyecto es el resultado de un trabajo realizado en clase,
+                    el objetivo era crear una app funcional que pudiera conectarse a una base de datos para así mostrar
+                    cierta información.
+                    El objetivo de esta app es manejar un servicio de cátering para otras empresas,
                     pudiendo añadir recetas con explicaciones sobre como hacer cada una.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta aplicación fue desarrollada durante un mes como reto final del primer curso del grado superior de DAM. (Abril - Mayo 2024)
+                    <span>Fecha:</span> Esta aplicación fue desarrollada durante un mes como reto final del primer curso
+                    del grado superior de DAM. (Abril - Mayo 2024)
                 </li>
                 <li>
-                    <span>Colaboradores:</span> En este proyecto trabajé con dos compañeros más, tanto en el diseño como en el desarrollo.
+                    <span>Colaboradores:</span> En este proyecto trabajé con dos compañeros más, tanto en el diseño como
+                    en el desarrollo.
                 </li>
             </ul>
-            <div class="enlaces"><div><a href="proyectos/cooking.html">Más información</a></div></div>
+            <div class="enlaces">
+                <div><a href="proyectos/cooking.html">Más información</a></div>
+            </div>
         </div>
         <div class="imagenes">
-            <a onclick="mostrarModalCooking()">
-                <img src="../res/cooking/img/portada.png"/>
-            </a>
-        </div>
-    </div>
-    <div class="modal" id="modalCooking">
-        <div class="modalContenido" id="modalContenidoCooking">
-            <video width="640" height="360" controls>
-                <source src="../res/cooking/vid/media1.mp4" type="video/mp4">
-                Tu navegador no acepta la reproduccion de videos
-            </video>
-            <div class="divCerrar"><span class="cerrar">Volver</span></div>
+            <img src="../res/cooking/img/portada.png" />
         </div>
     </div>
     <div class="proyecto" id="g5">
@@ -112,31 +131,29 @@
         <div class="descripcion">
             <ul>
                 <li>
-                    <span>Descripción:</span> Este proyecto es un trabajo realizado en clase. El objetivo era crear una web dinámica sobre un tema de nuestra elección.
-                    Nuestra idea fue crear una web sobre parques de atracciones, en la que se pueda guardar y mostrar información sobre distintos parques, 
-                    en los cuales hay atracciones sobre las que interesa mostrar información, como su estatura mínima, velocidad máxima y más datos.
+                    <span>Descripción:</span> Este proyecto es un trabajo realizado en clase. El objetivo era crear una
+                    web dinámica sobre un tema de nuestra elección.
+                    Nuestra idea fue crear una web sobre parques de atracciones, en la que se pueda guardar y mostrar
+                    información sobre distintos parques,
+                    en los cuales hay atracciones sobre las que interesa mostrar información, como su estatura mínima,
+                    velocidad máxima y más datos.
                 </li>
                 <li>
-                    <span>Fecha:</span> Esta página web la creamos durante un mes, en la tercera evaluación del grado superior de DAM (Abril - Mayo 2024)
+                    <span>Fecha:</span> Esta página web la creamos durante un mes, en la tercera evaluación del grado
+                    superior de DAM (Abril - Mayo 2024)
                 </li>
                 <li>
-                    <span>Colaboradores:</span> En este proyecto estuve trabajando con dos compañeros, aunque no formé parte de la creación del diseño.
+                    <span>Colaboradores:</span> En este proyecto estuve trabajando con dos compañeros, aunque no formé
+                    parte de la creación del diseño.
                 </li>
             </ul>
-            <div class="enlaces"><div><a href="proyectos/g5Forces.html">Más información</a></div></div>
+            <div class="enlaces">
+                <div><a href="proyectos/g5Forces.html">Más información</a></div>
+            </div>
         </div>
         <div class="imagenes">
-            <a onclick="mostrarModalG5()">
-                <img src="../res/g5forces/img/index.png"/>
-            </a>
-        </div>
-    </div>
-    <div class="modal" id="modalG5">
-        <div class="modalContenido" id="modalContenidoG5">
-            <img src="../res/g5forces/img/index.png">
-            <div class="divCerrar"><span class="cerrar">Volver</span></div>
+            <img src="../res/g5forces/img/index.png" />
         </div>
     </div>
     <script src="../javascript/estrellas.js"></script>
-    <script src="../javascript/ventanasModal.js"></script>
 </body>
