--- a/Portfolio/html/proyectos/signUpSignIn.html
+++ b/Portfolio/html/proyectos/signUpSignIn.html
@@ -18,7 +18,6 @@
     <div class="titulo">SignUpSignIn</div>
     <div class="proyecto masInfo">
         <div class="descripcion">
-            <span>Este proyecto está en proceso, esta información será completada una vez se termine el proyecto.</span>
             <ul>
                 <li>
                     <span>Descripción: </span> El proyecto consiste en el desarrollo de parte de una aplicación multicapa y multiplataforma que permita el
@@ -39,11 +38,27 @@
                 </li>
             </ul>
             <div class="slideshow-container">
-                <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade slides">
                     <img class="imgSlides" src="../../res/signUpSignIn/img/inicio.png">
                 </div>
-
+                <div class="mySlides fade slides">
+                    <img class="imgSlides" src="../../res/signUpSignIn/img/signUp.png">
+                </div>
+                <div class="mySlides fade slides">
+                    <img class="imgSlides" src="../../res/signUpSignIn/img/final.png">
+                </div>
+                <div class="mySlides fade slides">
+                    <img class="imgSlides" src="../../res/signUpSignIn/img/logo.png">
+                </div>
+                <div class="mySlides fade slides">
+                    <video width="640" height="360" controls>
+                        <source src="../../res/signUpSignIn/vid/vidPrueba.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div> <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
             </div>
         </div>
     </div>
