cambio en los titulos de los html y arreglo en el json

--- a/Portfolio/html/plantillaProyecto.html
+++ b/Portfolio/html/plantillaProyecto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/slideshow.css">
     <link rel="icon" href="" type="image/x-icon">
-    <title>Detalle del Proyecto</title>
+    <title>Proyecto - JulenHidalgo</title>
 </head>
 
 <body>
