--- a/Portfolio/html/portfolioJulenHidalgo.html
+++ b/Portfolio/html/portfolioJulenHidalgo.html
@@ -26,7 +26,7 @@
                 "descripcion_larga": "Solución para Sine (empresa de instalaciones eléctricas industriales) que resuelve la falta de trazabilidad de bobinas tras su uso. Implementé un servidor Node.js con: 1) Conexión a MySQL para registrar obra, encargado y almacén de cada bobina, 2) API REST (HTTP) para comunicación con las apps móviles (cliente y admin), y 3) Despliegue en Railway. Funcionalidades clave: registro histórico, búsqueda filtrada y autenticación de usuarios para operaciones seguras.",
                 "conocimientos": "Node.js, Express, MySQL, API REST, JWT (autenticación), Railway (deployment), arquitectura cliente-servidor.",
                 "colaboradores_largo": "Trabajo en equipo donde me enfoqué exclusivamente en el backend: diseñé la base de datos, desarrollé la API y garanticé la seguridad de las transacciones. Mis compañeros desarrollaron las apps móviles.",
-                "git_servidor": "https://github.com/JulenHidalgo/sine_server",
+                "git_server": "https://github.com/JulenHidalgo/sine-server",
                 "imagenes": [
                 "../assets/sine/img/sine_logo.png",
                 "../assets/sine/img/sine_admininicio.png",
